--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -60,6 +60,7 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.quantity}"></td>
             <td th:text="${product.productUnitPrice}"></td>
+            <td> <a th:href="@{delete_product(id=${product.getId()})}">Delete</a></td>
         </tr>
         </tbody>
     </table>
