--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -40,18 +40,28 @@
         .add-button {
             margin-top: 20px;
         }
+
+        .btn-group {
+            display: flex;
+        }
+
+        .btn-group .btn {
+            flex: 1;
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <h1>Product List</h1>
-    <table>
-        <thead>
+    <table class="table table-bordered">
+        <thead class="thead-light">
         <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Quantity</th>
             <th>Unit Price</th>
+            <th>Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -60,11 +70,16 @@
             <td th:text="${product.productName}"></td>
             <td th:text="${product.quantity}"></td>
             <td th:text="${product.productUnitPrice}"></td>
-            <td> <a th:href="@{delete_product(id=${product.getId()})}">Delete</a></td>
+            <td>
+                <div class="btn-group" role="group">
+                    <a th:href="@{delete_product(id=${product.getId()})}" class="btn btn-danger">Delete</a>
+                    <a th:href="@{update_product(id=${product.getId()})}" class="btn btn-primary">Update</a>
+                </div>
+            </td>
         </tr>
         </tbody>
     </table>
-    <a href="/add_product" class="btn btn-primary add-button">Add Product</a>
+    <a href="/add_product" class="btn btn-success add-button">Add Product</a>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
