--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -57,7 +57,6 @@
     <table class="table table-bordered">
         <thead class="thead-light">
         <tr>
-            <th>ID</th>
             <th>Name</th>
             <th>Quantity</th>
             <th>Unit Price</th>
@@ -66,14 +65,14 @@
         </thead>
         <tbody>
         <tr th:each="product : ${products}">
-            <td th:text="${product.id}"></td>
             <td th:text="${product.productName}"></td>
             <td th:text="${product.quantity}"></td>
             <td th:text="${product.productUnitPrice}"></td>
             <td>
                 <div class="btn-group" role="group">
+                    <a th:href="@{product_details(id=${product.getId()})}" class="btn btn-primary">Details</a>
+                    <a th:href="@{update_product(id=${product.getId()})}" class="btn btn-warning">Modify</a>
                     <a th:href="@{delete_product(id=${product.getId()})}" class="btn btn-danger">Delete</a>
-                    <a th:href="@{update_product(id=${product.getId()})}" class="btn btn-primary">Update</a>
                 </div>
             </td>
         </tr>
