ADDING THE CUSTOMER SECTION AND SOME IMPROVEMENTS

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,6 +39,7 @@
             border-color: #007bff;
             padding: 12px 30px;
             font-size: 1.2rem;
+            margin-right: 10px;
         }
 
         .btn-primary:hover {
@@ -51,7 +52,10 @@
 <div class="container">
     <h1>Welcome to Inventory & Billing Management</h1>
     <p>An efficient solution for managing your inventory and billing needs.</p>
-    <a href="/products" class="btn btn-lg btn-primary">Get Started</a>
+    <div>
+        <a href="/products" class="btn btn-lg btn-primary">Products</a>
+        <a href="/customers" class="btn btn-lg btn-primary">Customers</a>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
