--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Product List</title>
+    <title>Customer List</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -41,46 +41,42 @@
             margin-bottom: 20px;
         }
 
-        .btn-group {
-            display: flex;
-        }
-
-        .btn-group .btn {
-            flex: 1;
-            margin-right: 5px;
+        .delete-btn {
+            padding: 0;
         }
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>Product List</h1>
-    <a href="/add_product" class="btn btn-success add-button">Add Product</a>
+    <h1>Customer List</h1>
+    <a href="/add_customer" class="btn btn-success add-button">Add Customer</a>
     <table class="table table-bordered">
         <thead class="thead-light">
         <tr>
-            <th>Name</th>
-            <th>Quantity</th>
-            <th>Unit Price</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Address</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="product : ${products}">
-            <td th:text="${product.productName}"></td>
-            <td th:text="${product.quantity}"></td>
-            <td th:text="${product.productUnitPrice}"></td>
-            <td>
-                <div class="btn-group" role="group">
-                    <a th:href="@{product_details(id=${product.getId()})}" class="btn btn-primary">Details</a>
-                    <a th:href="@{update_product(id=${product.getId()})}" class="btn btn-warning">Modify</a>
-                    <a th:href="@{delete_product(id=${product.getId()})}" class="btn btn-danger">Delete</a>
+        <tr th:each="customer : ${customers}">
+            <td th:text="${customer.firstName}"></td>
+            <td th:text="${customer.lastName}"></td>
+            <td th:text="${customer.email}"></td>
+            <td th:text="${customer.address}"></td>
+            <td class="delete-btn">
+                <div>
+                    <a th:href="@{customer_details(customerId=${customer.getCustomerId()})}" class="btn btn-primary">Details</a>
+                    <a th:href="@{update_customer(customerId=${customer.getCustomerId()})}" class="btn btn-warning">Modify</a>
+                    <a th:href="@{delete_customer(customerId=${customer.getCustomerId()})}" class="btn btn-danger">Delete</a>
                 </div>
             </td>
         </tr>
         </tbody>
     </table>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
