--- a/src/main/resources/templates/add_customer.html
+++ b/src/main/resources/templates/add_customer.html
@@ -31,19 +31,15 @@
     <h1 class="mt-4">Add Customer</h1>
     <form th:action="@{/add_customerPost}" method="post">
         <div class="form-group">
-            <label for="customerFirstName">First Name:</label>
-            <input type="text" class="form-control" id="customerFirstName" name="customerFirstName" required>
+            <label for="customerName">Customer Name:</label>
+            <input type="text" class="form-control" id="customerName" name="customerName" required>
         </div>
         <div class="form-group">
-            <label for="customerLastName">Last Name:</label>
-            <input type="text" class="form-control" id="customerLastName" name="customerLastName" required>
-        </div>
-        <div class="form-group">
-            <label for="customerEmail">Email:</label>
+            <label for="customerEmail">Customer Email:</label>
             <input type="email" class="form-control" id="customerEmail" name="customerEmail" required>
         </div>
         <div class="form-group">
-            <label for="customerAddress">Address:</label>
+            <label for="customerAddress">Customer Address:</label>
             <input type="text" class="form-control" id="customerAddress" name="customerAddress" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
