--- a/src/main/resources/templates/customer_details.html
+++ b/src/main/resources/templates/customer_details.html
@@ -8,16 +8,14 @@
 <table class="table table-bordered">
     <thead class="thead-light">
     <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Customer Name</th>
         <th>Email</th>
         <th>Address</th>
     </tr>
     </thead>
     <tbody>
     <tr th:object="${customerToBeDetailed}">
-        <td th:text="${customerToBeDetailed.firstName}"></td>
-        <td th:text="${customerToBeDetailed.lastName}"></td>
+        <td th:text="${customerToBeDetailed.name}"></td>
         <td th:text="${customerToBeDetailed.email}"></td>
         <td th:text="${customerToBeDetailed.address}"></td>
     </tr>
