--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -53,8 +53,7 @@
     <table class="table table-bordered">
         <thead class="thead-light">
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Name</th>
             <th>Email</th>
             <th>Address</th>
             <th>Actions</th>
@@ -62,8 +61,7 @@
         </thead>
         <tbody>
         <tr th:each="customer : ${customers}">
-            <td th:text="${customer.firstName}"></td>
-            <td th:text="${customer.lastName}"></td>
+            <td th:text="${customer.name}"></td>
             <td th:text="${customer.email}"></td>
             <td th:text="${customer.address}"></td>
             <td class="delete-btn">
