--- a/src/main/resources/templates/update_customer.html
+++ b/src/main/resources/templates/update_customer.html
@@ -11,12 +11,8 @@
     <form th:action="@{/save_updated_customer}" th:object="${customerToBeUpdated}" method="post">
         <input type="hidden" th:field="*{customerId}">
         <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" id="firstName" th:field="*{firstName}" required>
-        </div>
-        <div class="form-group">
-            <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" id="lastName" th:field="*{lastName}" required>
+            <label for="customerName">Customer Name:</label>
+            <input type="text" class="form-control" id="customerName" th:field="*{name}" required>
         </div>
         <div class="form-group">
             <label for="email">Email:</label>
