ADDING THE ORDER ENTITY AND SOME FEATURES

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,6 +55,7 @@
     <div>
         <a href="/products" class="btn btn-lg btn-primary">Products</a>
         <a href="/customers" class="btn btn-lg btn-primary">Customers</a>
+        <a href="/orders" class="btn btn-lg btn-primary">Orders</a>
     </div>
 </div>
 
